@@ -1,0 +1,1 @@
+10.0.10.1 dev enp3s0 lladdr 00:0d:b9:37:2b:c2 REACHABLE
