@@ -26,6 +26,7 @@ netdiscovery/netinventory:
 * Fix #634: Net::Ping version may not numeric with win32 installer
 * Add Panasas PanFS support
 * Add few HP/Compaq serialnumber cases support
+* Fix #605: try 'ip neighbor show' if 'arp' is not available for netdiscovery
 
 2.4.2 Wed, 03 Oct 2018
 
